remove page numbering

--- a/Proposal.tex
+++ b/Proposal.tex
@@ -1,4 +1,5 @@
-\documentclass[12pt]{article}
+\documentclass[10pt]{article}
+\pagenumbering{gobble}
 \begin{document}
 
 \title{Project Title for Unix OS Semester Project}
