add title, add motivation

--- a/Proposal.tex
+++ b/Proposal.tex
@@ -1,9 +1,10 @@
 \documentclass[10pt]{article}
+\usepackage[a4paper,margin=1in,footskip=0.25in]{geometry}
 \pagenumbering{gobble}
 \begin{document}
 
-\title{Project Title for Unix OS Semester Project}
-\author{TEAM 2: Kevin Portillo, Taylar Stowers, Kimberly Davis}
+\title{Comparison of Machine Learning Algorithms on GPU Variants}
+\author{TEAM 2: Kevin Portillo, Taylar Stowers, Kimberley Davis}
 \maketitle
 
 \input{Motivation.tex}
