--- a/Proposal.tex
+++ b/Proposal.tex
@@ -1,9 +1,9 @@
-\documentclass[10pt]{article}
+\documentclass[12pt]{article}
 \usepackage[a4paper,margin=1in,footskip=0.25in]{geometry}
 \pagenumbering{gobble}
 \begin{document}
 
-\title{Comparison of Machine Learning Algorithms on GPU Variants}
+\title{Classification Algorithms on GPU Variants}
 \author{TEAM 2: Kevin Portillo, Taylar Stowers, Kimberley Davis}
 \maketitle
 
