--- a/Motivation.tex
+++ b/Motivation.tex
@@ -5,10 +5,11 @@
 Machine Learning (ML) has become a hot topic in the recent years. 
 Various industries have begun to dive into ML concepts and algorithms  
 to improve decision making, predict market sentiment, and understand consumers. 
-College undergraduates have noticed this trend and have begun diving into ML techniques and concepts. 
-Through decades of testing, it has been shown the Central Processing Units (CPUs) alone are not suffice to 
-run ML algorithms efficiently, even if the Random Access Memory (RAM) cards are upgraded. 
-Graphical Processing Units (GPUs) were thus found to be a parameter whithin a system that yield better results. 
+College undergraduates and interested programmers have noticed this trend and have begun diving 
+into ML techniques and concepts. Through decades of testing, it has been shown the 
+Central Processing Units (CPUs) alone are not suffice to run ML algorithms efficiently, 
+even if the Random Access Memory (RAM) cards are upgraded. Graphical Processing Units (GPUs) 
+were thus found to be a parameter whithin a system that yield better results. 
 In recent years, GPUs have be proven to be useful tools when attempting to implement ML in a project. 
 A large number of GPUs within a system, known as a GPU cluster, have been contributing to the efficiency 
 of super computers for decades. 
