--- a/Problem.tex
+++ b/Problem.tex
@@ -2,12 +2,13 @@
 \label{sec:Problem}
 
 % Begin writing about problem here...
-For this project, we propose to run an two identical ML classification algorithms on a 
-variety of platforms to measure efficiency and results. The goal is to compare each platform 
-and analyze which gave an acceptable result given the cost of the machine. Intuitivelty, the 
+For this project, we propose to run two ML classification algorithms (CAs) on a single dataset: 
+Support Vector Machine (SVM) and K-Nearest Neighbor (kNN). 
+The goal is to determine which system can perform ML classification the best at a reasonable price 
+so that novice programmers can use as reference. Intuitivelty, the 
 platform with the most amount of GPUs will preform the best but at its price, will not suit 
-well for novice students on a budget. With this in mind we propose running the classification 
-algorithms on several platforms: a laptop with a dedicated GPU, a desktop with one GPU, another 
-desktop with three GPUs, another with 6 GPUs, finally with the help of the Center for Advanced 
-Computing and Data Science (CACDS) we will run these classification algorithms on the Sabine
+well for novice students on a budget. With this in mind we propose running the CAs on several platforms: 
+a laptop with a dedicated GPU, a desktop with one GPU, another 
+desktop with three GPUs, another with six GPUs, finally with the help of the Center for Advanced 
+Computing and Data Science (CACDS) we will run these CAs on the Sabine
 Cluster that host a total of 5704 CPU cores and 12 GPU nodes.
