remove awkward phrasing

--- a/Resolution.tex
+++ b/Resolution.tex
@@ -2,13 +2,13 @@
 \label{sec:Resolution}
 
 % Begin writing about resolution here...
-The two classification algorithms that we propose to test will be 
-Support Vector Machines (SVM) and K-Nearest Neighbor (kNN). The 
-dataset has yet to be determined but we are looking for one with a 
-few million tuples. The classification algorithms will be implemented 
+The two CAs that will be used to test each system will be SVM and kNN. 
+The dataset has yet to be determined but we are looking for one with a 
+few million tuples. The CAs  will be implemented 
 in Python using Scikit-learn, a free software ML library for the Python 
 programming language (PL). The platforms on which we will test our 
-algorithms on will be provided by one of our team members who owns the 
+algorithms will be provided by one of our team members who owns the 
 laptop with dedidicated GPU and the single, triple, and sextuple GPU 
 desktops. The CACDS intitute will provide access to the Sabine Cluster 
-as mentioned above. 
+as mentioned above. Bash scripting will also be used to consolidate the 
+testing procedures and be the intermediary between the user and the Operating System (OS).
